--- a/flaming-fists.html
+++ b/flaming-fists.html
@@ -24,12 +24,19 @@
 		</nav>
 	</div>
 	<div id=content>
-		<div>
-<h2>
+		<div class="film-intro">
+<h2 class="title">
 Flaming Fists
 </h2>
+<div class="film-medium">
+Digital
 </div>
-<p>test change</p>
+</div>
+<iframe class="film-yt" src="https://www.youtube.com/embed/yM_cSYCT64k" title="YouTube video player for Flaming Fists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
+<p>Torn between her love for taekwondo and familial expectations, Amy
+squares up for a regional sparring championship to face her biggest
+opponent yet.</p>
 
 	</div>
 </body>
