--- a/the-redemption-of-mr-greg.html
+++ b/the-redemption-of-mr-greg.html
@@ -24,12 +24,18 @@
 		</nav>
 	</div>
 	<div id=content>
-		<div>
-<h2>
+		<div class="film-intro">
+<h2 class="title">
 The Redemption of Mr. Greg
 </h2>
+<div class="film-medium">
+Digital
 </div>
-<p>hi2</p>
+</div>
+<iframe class="film-yt" src="https://www.youtube.com/embed/nDNND5ocIZg" title="YouTube video player for The Redemption of Mr. Greg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
+<p>An old bitter soul has a magical encounter that pushes him to
+reconnect with his daughter.</p>
 
 	</div>
 </body>
