--- a/flaming-fists.html
+++ b/flaming-fists.html
@@ -37,7 +37,7 @@ Digital
 <p>Torn between her love for taekwondo and familial expectations, Amy
 squares up for a regional sparring championship to face her biggest
 opponent yet.</p>
-
+<div class=empty></div><img class=still src='media/flaming-fists/01.jpg'><img class=still src='media/flaming-fists/02.jpg'><img class=still src='media/flaming-fists/03.jpg'><img class=still src='media/flaming-fists/04.jpg'><img class=still src='media/flaming-fists/05.jpg'>
 	</div>
 </body>
 <script>const short_base = 'flaming-fists'</script>
