--- a/haiku-film.html
+++ b/haiku-film.html
@@ -36,7 +36,7 @@ Haiku Film
 </iframe>
 <p>Long lost lovers or ex-friends, two women examine what they have lost
 in remembrance.</p>
-
+<div class=empty></div><img class=still src='media/haiku-film/01.jpg'><img class=still src='media/haiku-film/02.jpg'><img class=still src='media/haiku-film/03.jpg'>
 	</div>
 </body>
 <script>const short_base = 'haiku-film'</script>
