--- a/kettle-boils-while-watched.html
+++ b/kettle-boils-while-watched.html
@@ -36,7 +36,7 @@ Kettle Boils While Watched
 </iframe>
 <p>Urban isolation, surveillance and anxiety explored through editing
 and audio.</p>
-
+<div class=empty></div><img class=still src='media/kettle-boils-while-watched/01.jpg'><img class=still src='media/kettle-boils-while-watched/02.jpg'><img class=still src='media/kettle-boils-while-watched/03.jpg'>
 	</div>
 </body>
 <script>const short_base = 'kettle-boils-while-watched'</script>
