--- a/the-redemption-of-mr-greg.html
+++ b/the-redemption-of-mr-greg.html
@@ -36,7 +36,7 @@ Digital
 </iframe>
 <p>An old bitter soul has a magical encounter that pushes him to
 reconnect with his daughter.</p>
-
+<div class=empty></div><img class=still src='media/the-redemption-of-mr-greg/01.jpg'><img class=still src='media/the-redemption-of-mr-greg/02.jpg'><img class=still src='media/the-redemption-of-mr-greg/03.jpg'>
 	</div>
 </body>
 <script>const short_base = 'the-redemption-of-mr-greg'</script>
