--- a/111-film.html
+++ b/111-film.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>1:11 film</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,10 +33,10 @@
 16mm B&amp;W Reversal Film
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/dyThu0-Eq-Q" title="YouTube video player for 1:11 film" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>Learning how to shoot on film in my first semester, cut by hand.
 Explores light and motion.</p>
+<iframe class="film-yt" src="https://www.youtube.com/embed/dyThu0-Eq-Q?modestbranding=1" title="YouTube player for 1:11 film" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
 <div class=empty></div><img class=still src='media/111-film/01.jpg'><img class=still src='media/111-film/02.jpg'><img class=still src='media/111-film/03.jpg'><img class=still src='media/111-film/04.jpg'><img class=still src='media/111-film/05.jpg'><img class=still src='media/111-film/06.jpg'><img class=still src='media/111-film/07.jpg'><img class=still src='media/111-film/08.jpg'>
 	</div>
 </body>
