--- a/barbies-bitch-bites-back.html
+++ b/barbies-bitch-bites-back.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Barbie's Bitch Bites Back</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,12 +33,12 @@ Barbie’s Bitch Bites Back
 Digital
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/W5yFtkCnW5I" title="YouTube video player for Barbie&#39;s Bitch Bites Back" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>Intermediate Cinematography narrative editing project where the class
 brainstorms and collaboratively films and then edit in groups of two. In
 this project we unpack the meaning of femininity and the female
 wrath.</p>
+<iframe class="film-yt" src="https://www.youtube.com/embed/W5yFtkCnW5I?modestbranding=1" title="YouTube player for Barbie&#39;s Bitch Bites Back" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
 <div class=empty></div><img class=still src='media/barbies-bitch-bites-back/01.jpg'><img class=still src='media/barbies-bitch-bites-back/02.jpg'><img class=still src='media/barbies-bitch-bites-back/03.jpg'><img class=still src='media/barbies-bitch-bites-back/04.jpg'><img class=still src='media/barbies-bitch-bites-back/05.jpg'>
 	</div>
 </body>
