--- a/col-and-olga.html
+++ b/col-and-olga.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Col and Olga</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,11 +33,11 @@ Col and Olga
 Analog, 16mm color film
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/eJeZrADhFrg" title="YouTube video player for Col and Olga" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>A play on objects and separation as two “lovers” try to find each
 other through the urban DC transportation.</p>
-
+<iframe class="film-yt" src="https://www.youtube.com/embed/eJeZrADhFrg?modestbranding=1" title="YouTube player for Col and Olga" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
+<div class=empty></div><img class=still src='media/col-and-olga/01.jpg'><img class=still src='media/col-and-olga/02.jpg'><img class=still src='media/col-and-olga/03.jpg'><img class=still src='media/col-and-olga/04.jpg'><img class=still src='media/col-and-olga/05.jpg'>
 	</div>
 </body>
 <script>const short_base = 'col-and-olga'</script>
