--- a/flaming-fists.html
+++ b/flaming-fists.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Flaming Fists</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,12 +33,12 @@ Flaming Fists
 Digital
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/yM_cSYCT64k" title="YouTube video player for Flaming Fists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>Torn between her love for taekwondo and familial expectations, Amy
 squares up for a regional sparring championship to face her biggest
 opponent yet.</p>
-<div class=empty></div><img class=still src='media/flaming-fists/01.jpg'><img class=still src='media/flaming-fists/02.jpg'><img class=still src='media/flaming-fists/03.jpg'><img class=still src='media/flaming-fists/04.jpg'><img class=still src='media/flaming-fists/05.jpg'>
+<iframe class="film-yt" src="https://www.youtube.com/embed/yM_cSYCT64k?modestbranding=1" title="YouTube player for Flaming Fists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
+<div class=empty></div><img class=still src='media/flaming-fists/01.jpg'><img class=still src='media/flaming-fists/02.jpg'><img class=still src='media/flaming-fists/03.jpg'><img class=still src='media/flaming-fists/04.jpg'><img class=still src='media/flaming-fists/06.jpg'>
 	</div>
 </body>
 <script>const short_base = 'flaming-fists'</script>
