--- a/good-goods.html
+++ b/good-goods.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Good Goods</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,10 +33,10 @@ Good Goods
 Digital
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/kXE2FefSthU" title="YouTube video player for Good Goods" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>Two troubled teenagers decide to steal some baking equipment, but one
 of them gets a chance of redemption and must confront her past.</p>
+<iframe class="film-yt" src="https://www.youtube.com/embed/kXE2FefSthU?modestbranding=1" title="YouTube player for Good Goods" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
 <div class=empty></div><img class=still src='media/good-goods/01.jpg'><img class=still src='media/good-goods/02.jpg'><img class=still src='media/good-goods/03.jpg'><img class=still src='media/good-goods/04.jpg'><img class=still src='media/good-goods/05.jpg'><img class=still src='media/good-goods/06.jpg'><img class=still src='media/good-goods/07.jpg'><img class=still src='media/good-goods/08.jpg'><img class=still src='media/good-goods/09.jpg'><img class=still src='media/good-goods/10.jpg'><img class=still src='media/good-goods/11.jpg'>
 	</div>
 </body>
