--- a/growing-and-leaving.html
+++ b/growing-and-leaving.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Growing and leaving</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,11 +33,11 @@ Growing and leaving
 16mm B&amp;W Reversal Film
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/tmo5HYpJDSs" title="YouTube video player for Growing and leaving" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>Second analog film. A girl revisits childhood sites and sees a shadow
 of something she left behind. Plays with angles and disorientation.</p>
-<div class=empty></div><img class=still src='media/growing-and-leaving/04.jpg'><img class=still src='media/growing-and-leaving/05.jpg'><img class=still src='media/growing-and-leaving/06.jpg'><img class=still src='media/growing-and-leaving/07.jpg'><img class=still src='media/growing-and-leaving/08.jpg'><img class=still src='media/growing-and-leaving/09.jpg'><img class=still src='media/growing-and-leaving/10.jpg'><img class=still src='media/growing-and-leaving/11.jpg'><img class=still src='media/growing-and-leaving/12.jpg'><img class=still src='media/growing-and-leaving/13.jpg'>
+<iframe class="film-yt" src="https://www.youtube.com/embed/tmo5HYpJDSs?modestbranding=1" title="YouTube player for Growing and leaving" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
+<div class=empty></div><img class=still src='media/growing-and-leaving/01.jpg'><img class=still src='media/growing-and-leaving/05.jpg'><img class=still src='media/growing-and-leaving/06.jpg'><img class=still src='media/growing-and-leaving/07.jpg'><img class=still src='media/growing-and-leaving/08.jpg'><img class=still src='media/growing-and-leaving/09.jpg'><img class=still src='media/growing-and-leaving/10.jpg'><img class=still src='media/growing-and-leaving/11.jpg'><img class=still src='media/growing-and-leaving/12.jpg'><img class=still src='media/growing-and-leaving/13.jpg'>
 	</div>
 </body>
 <script>const short_base = 'growing-and-leaving'</script>
