--- a/haiku-film.html
+++ b/haiku-film.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Haiku Film</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,10 +33,10 @@ Haiku Film
 16 mm Color Negative Film
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/qG45tsNTZmU" title="YouTube video player for Haiku Film" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>Long lost lovers or ex-friends, two women examine what they have lost
 in remembrance.</p>
+<iframe class="film-yt" src="https://www.youtube.com/embed/qG45tsNTZmU?modestbranding=1" title="YouTube player for Haiku Film" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
 <div class=empty></div><img class=still src='media/haiku-film/01.jpg'><img class=still src='media/haiku-film/02.jpg'><img class=still src='media/haiku-film/03.jpg'>
 	</div>
 </body>
