--- a/kettle-boils-while-watched.html
+++ b/kettle-boils-while-watched.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Kettle Boils While Watched</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,10 +33,10 @@ Kettle Boils While Watched
 16 mm Color Negative Film
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/qG45tsNTZmU" title="YouTube video player for Kettle Boils While Watched" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>Urban isolation, surveillance and anxiety explored through editing
 and audio.</p>
+<iframe class="film-yt" src="https://www.youtube.com/embed/qG45tsNTZmU?modestbranding=1" title="YouTube player for Kettle Boils While Watched" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
 <div class=empty></div><img class=still src='media/kettle-boils-while-watched/01.jpg'><img class=still src='media/kettle-boils-while-watched/02.jpg'><img class=still src='media/kettle-boils-while-watched/03.jpg'>
 	</div>
 </body>
