--- a/me-and-my-babysitter.html
+++ b/me-and-my-babysitter.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Me and My Babysitter</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,12 +33,12 @@ Me and My Babysitter
 Digital, blackmagic HD
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/OAnNDhukNuo" title="YouTube video player for Me and My Babysitter" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>How do we learn to do bad things? And how does our knowledge of evil
 inform our adolescence? These questions are explored in this film
 through learned transgressions. In a way, by learning how to be cruel, a
 girl grows up.</p>
+<iframe class="film-yt" src="https://www.youtube.com/embed/OAnNDhukNuo?modestbranding=1" title="YouTube player for Me and My Babysitter" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
 <div class=empty></div><img class=still src='media/me-and-my-babysitter/01.jpg'><img class=still src='media/me-and-my-babysitter/02.jpg'><img class=still src='media/me-and-my-babysitter/03.jpg'><img class=still src='media/me-and-my-babysitter/04.jpg'><img class=still src='media/me-and-my-babysitter/05.jpg'><img class=still src='media/me-and-my-babysitter/06.jpg'><img class=still src='media/me-and-my-babysitter/07.jpg'><img class=still src='media/me-and-my-babysitter/08.jpg'><img class=still src='media/me-and-my-babysitter/09.jpg'><img class=still src='media/me-and-my-babysitter/10.jpg'><img class=still src='media/me-and-my-babysitter/11.jpg'><img class=still src='media/me-and-my-babysitter/12.jpg'><img class=still src='media/me-and-my-babysitter/13.jpg'><img class=still src='media/me-and-my-babysitter/14.jpg'><img class=still src='media/me-and-my-babysitter/15.jpg'><img class=still src='media/me-and-my-babysitter/16.jpg'><img class=still src='media/me-and-my-babysitter/17.jpg'><img class=still src='media/me-and-my-babysitter/18.jpg'><img class=still src='media/me-and-my-babysitter/19.jpg'><img class=still src='media/me-and-my-babysitter/20.jpg'>
 	</div>
 </body>
