--- a/the-redemption-of-mr-greg.html
+++ b/the-redemption-of-mr-greg.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>The Redemption of Mr. Greg</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,10 +33,10 @@ The Redemption of Mr. Greg
 Digital
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/nDNND5ocIZg" title="YouTube video player for The Redemption of Mr. Greg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>An old bitter soul has a magical encounter that pushes him to
 reconnect with his daughter.</p>
+<iframe class="film-yt" src="https://www.youtube.com/embed/nDNND5ocIZg?modestbranding=1" title="YouTube player for The Redemption of Mr. Greg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
 <div class=empty></div><img class=still src='media/the-redemption-of-mr-greg/01.jpg'><img class=still src='media/the-redemption-of-mr-greg/02.jpg'><img class=still src='media/the-redemption-of-mr-greg/03.jpg'>
 	</div>
 </body>
