--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>About</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
