--- a/brunch.html
+++ b/brunch.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Brunch</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,13 +33,13 @@ Brunch
 16 mm Color Negative Film
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/qG45tsNTZmU" title="YouTube video player for Brunch" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>Mel’s Cafe is an old place on West Main Street. The people who go
 there know it for its hearty brunch and newspapers pasted over its
 walls. I wanted to capture a mundane moment, have it mingle with my own
 nostalgia through the audio.</p>
-
+<iframe class="film-yt" src="https://www.youtube.com/embed/qG45tsNTZmU?modestbranding=1" title="YouTube player for Brunch" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
+<div class=empty></div><img class=still src='media/brunch/01.jpg'><img class=still src='media/brunch/02.jpg'><img class=still src='media/brunch/03.jpg'>
 	</div>
 </body>
 <script>const short_base = 'brunch'</script>
