--- a/eyes-on-me.html
+++ b/eyes-on-me.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Eyes On Me</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,11 +33,11 @@ Eyes On Me
 Digital, blackmagic HD
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/v9_GJQzCOOc" title="YouTube video player for Eyes On Me" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>“Eyes on Me” was an Intermediate Cinematography project that explores
 the hypocrisy of prominent religious figures. It is a diptik film, shown
 through dual screens between two locations.</p>
+<iframe class="film-yt" src="https://www.youtube.com/embed/v9_GJQzCOOc?modestbranding=1" title="YouTube player for Eyes On Me" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
 <div class=empty></div><img class=still src='media/eyes-on-me/01.jpg'><img class=still src='media/eyes-on-me/02.jpg'><img class=still src='media/eyes-on-me/03.jpg'><img class=still src='media/eyes-on-me/04.jpg'><img class=still src='media/eyes-on-me/05.jpg'><img class=still src='media/eyes-on-me/06.jpg'><img class=still src='media/eyes-on-me/07.jpg'><img class=still src='media/eyes-on-me/08.jpg'><img class=still src='media/eyes-on-me/09.jpg'><img class=still src='media/eyes-on-me/10.jpg'>
 	</div>
 </body>
