--- a/finding-eden.html
+++ b/finding-eden.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Finding Eden</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,12 +33,12 @@ Finding Eden
 Digital, blackmagic HD
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/qpZ0cuob_Io" title="YouTube video player for Finding Eden" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>An Adrenaline Project Film, this was made in 72 hours given the
 prompt of a coming-of-age film. A girl’s world comes crumbling down when
 she discovers her mother’s secret. She must learn to stand up for
 herself and her dreams.</p>
+<iframe class="film-yt" src="https://www.youtube.com/embed/qpZ0cuob_Io?modestbranding=1" title="YouTube player for Finding Eden" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
 <div class=empty></div><img class=still src='media/finding-eden/00.jpg'><img class=still src='media/finding-eden/01.jpg'><img class=still src='media/finding-eden/02.jpg'><img class=still src='media/finding-eden/03.jpg'><img class=still src='media/finding-eden/04.jpg'><img class=still src='media/finding-eden/05.jpg'><img class=still src='media/finding-eden/06.jpg'><img class=still src='media/finding-eden/07.jpg'><img class=still src='media/finding-eden/08.jpg'><img class=still src='media/finding-eden/09.jpg'><img class=still src='media/finding-eden/10.jpg'><img class=still src='media/finding-eden/12.jpg'><img class=still src='media/finding-eden/13.jpg'><img class=still src='media/finding-eden/14.jpg'>
 	</div>
 </body>
