--- a/hello-world.html
+++ b/hello-world.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>hello world</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
