--- a/jazz-club.html
+++ b/jazz-club.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Jazz Club</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -32,9 +33,9 @@ Jazz Club
 Analog, 16mm b&amp;w reversal film
 </div>
 </div>
-<iframe class="film-yt" src="https://www.youtube.com/embed/W8Jgeo6rx6k" title="YouTube video player for Jazz Club" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-</iframe>
 <p>Class project shot on film. Night at the jazz club gone wrong.</p>
+<iframe class="film-yt" src="https://www.youtube.com/embed/W8Jgeo6rx6k?modestbranding=1" title="YouTube player for Jazz Club" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+</iframe>
 <div class=empty></div><img class=still src='media/jazz-club/01.jpg'><img class=still src='media/jazz-club/02.jpg'><img class=still src='media/jazz-club/03.jpg'><img class=still src='media/jazz-club/04.jpg'><img class=still src='media/jazz-club/05.jpg'><img class=still src='media/jazz-club/06.jpg'><img class=still src='media/jazz-club/07.jpg'><img class=still src='media/jazz-club/08.jpg'>
 	</div>
 </body>
