--- a/index.html
+++ b/index.html
@@ -20,65 +20,12 @@
 		<a short='111-film' class='title' href='111-film.html'><img class=thumb src='media/111-film/01.jpg'>1:11 film</a><a short='growing-and-leaving' class='title' href='growing-and-leaving.html'><img class=thumb src='media/growing-and-leaving/01.jpg'>Growing and leaving</a><a short='brunch' class='title' href='brunch.html'><img class=thumb src='media/brunch/01.jpg'>Brunch</a><a short='kettle-boils-while-watched' class='title' href='kettle-boils-while-watched.html'><img class=thumb src='media/kettle-boils-while-watched/01.jpg'>Kettle Boils While Watched</a><a short='haiku-film' class='title' href='haiku-film.html'><img class=thumb src='media/haiku-film/01.jpg'>Haiku Film</a>
 	</details><details group='Writing' class=nav-category>
 		<summary>Writing</summary>
-		<a short='anaphylaxis' class='title' href='anaphylaxis.html'><img class=thumb src='media/anaphylaxis/01.jpg'>Anaphylaxis</a><a short='hello-world' class='title' href='hello-world.html'><img class=thumb src='media/hello-world/01.jpg'>hello world</a><a short='dialogue' class='title' href='dialogue.html'><img class=thumb src='media/dialogue/01.jpg'>dialogue</a>
+		<a short='anaphylaxis' class='title' href='anaphylaxis.html'>Anaphylaxis</a><a short='hello-world' class='title' href='hello-world.html'>hello world</a><a short='dialogue' class='title' href='dialogue.html'>dialogue</a>
 	</details><a short='about' href='about.html'>About</a>
 		</nav>
 	</div>
 	<div id=content>
-		<p>hi website!! :)</p>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting
-industry. Lorem Ipsum has been the industry’s standard dummy text ever
-since the 1500s, when an unknown printer took a galley of type and
-scrambled it to make a type specimen book. It has survived not only five
-centuries, but also the leap into electronic typesetting, remaining
-essentially unchanged. It was popularised in the 1960s with the release
-of Letraset sheets containing Lorem Ipsum passages, and more recently
-with desktop publishing software like Aldus PageMaker including versions
-of Lorem Ipsum.</p>
-<p>
-Lorem Ipsum is simply dummy text of the printing and typesetting
-industry. Lorem Ipsum has been the industry’s standard dummy text ever
-since the 1500s, when an unknown printer took a galley of type and
-scrambled it to make a type specimen book. It has survived not only five
-centuries, but also the leap into electronic typesetting, remaining
-essentially unchanged. It was popularised in the 1960s with the release
-of Letraset sheets containing Lorem Ipsum passages, and more recently
-with desktop publishing software like Aldus PageMaker including versions
-of Lorem Ipsum.
-</p>
-<p>
-Lorem Ipsum is simply dummy text of the printing and typesetting
-industry. Lorem Ipsum has been the industry’s standard dummy text ever
-since the 1500s, when an unknown printer took a galley of type and
-scrambled it to make a type specimen book. It has survived not only five
-centuries, but also the leap into electronic typesetting, remaining
-essentially unchanged. It was popularised in the 1960s with the release
-of Letraset sheets containing Lorem Ipsum passages, and more recently
-with desktop publishing software like Aldus PageMaker including versions
-of Lorem Ipsum.
-</p>
-<p>
-Lorem Ipsum is simply dummy text of the printing and typesetting
-industry. Lorem Ipsum has been the industry’s standard dummy text ever
-since the 1500s, when an unknown printer took a galley of type and
-scrambled it to make a type specimen book. It has survived not only five
-centuries, but also the leap into electronic typesetting, remaining
-essentially unchanged. It was popularised in the 1960s with the release
-of Letraset sheets containing Lorem Ipsum passages, and more recently
-with desktop publishing software like Aldus PageMaker including versions
-of Lorem Ipsum.
-</p>
-<p>
-Lorem Ipsum is simply dummy text of the printing and typesetting
-industry. Lorem Ipsum has been the industry’s standard dummy text ever
-since the 1500s, when an unknown printer took a galley of type and
-scrambled it to make a type specimen book. It has survived not only five
-centuries, but also the leap into electronic typesetting, remaining
-essentially unchanged. It was popularised in the 1960s with the release
-of Letraset sheets containing Lorem Ipsum passages, and more recently
-with desktop publishing software like Aldus PageMaker including versions
-of Lorem Ipsum.
-</p>
+		<p>w e l c o m e</p>
 
 	</div>
 </body>
