--- a/about-artist.html
+++ b/about-artist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>About</title>
+<title>About Artist</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -21,13 +21,13 @@
 	</details><details group='Writing' class=nav-category>
 		<summary>Writing</summary>
 		<a short='anaphylaxis' class='title' href='anaphylaxis.html'>Anaphylaxis</a><a short='hello-world' class='title' href='hello-world.html'>hello world</a><a short='dialogue' class='title' href='dialogue.html'>dialogue</a>
-	</details><a short='about' href='about.html' class=current-page>About</a>
+	</details><a short='about-artist' href='about-artist.html' class=current-page>About</a>
 		</nav>
 	</div>
 	<div id=content>
 		<div>
 <h2>
-About
+About Artist
 </h2>
 </div>
 <p>Jolinna Li is a filmmaker based in Charlottesville, Virginia. She is
@@ -46,5 +46,5 @@ project and works with Lighthouse Studios as a freelance editor.</p>
 
 	</div>
 </body>
-<script>const short_base = 'about'</script>
+<script>const short_base = 'about-artist'</script>
 <script src=script.js></script>
