--- a/col-and-olga.html
+++ b/col-and-olga.html
@@ -21,7 +21,7 @@
 	</details><details group='Writing' class=nav-category>
 		<summary>Writing</summary>
 		<a short='anaphylaxis' class='title' href='anaphylaxis.html'>Anaphylaxis</a><a short='hello-world' class='title' href='hello-world.html'>hello world</a><a short='dialogue' class='title' href='dialogue.html'>dialogue</a>
-	</details><a short='about' href='about.html'>About</a>
+	</details><a short='about-artist' href='about-artist.html'>About</a>
 		</nav>
 	</div>
 	<div id=content>
